--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docusign",
-  "version": "8.0.3",
+  "version": "8.0.4",
   "description": "A DocuSign API helper library with promise support",
   "main": "docusign.js",
   "scripts": {
@@ -45,7 +45,7 @@
     "examples",
     "sample-config.json"
   ],
-  "repository": "https://github.com/docusign/docusign-node-client",
+  "repository": "https://github.com/docusign/docusign-node-client/tree/8.x",
   "dependencies": {
     "bluebird": "3.1.5",
     "into-stream": "2.0.0",
